--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,6 @@ want to highlight.
 Extended Exercises (2 points possible from this section)
 ● 1 Point: Stick the header to the top of the page so that it always shows when you
 scroll down the page.
-● 1 Point: Use the Google Maps API to map to your hometown (or to Detroit or to
-Grand Circus)
 ● 1 Point: Learn about GitHub Pages and push there so your site is public.-->
 <html>
 
@@ -29,6 +27,8 @@ Grand Circus)
     <div class=realBody>
         <section id="S1">
             <h3>projects</h3>
+            
+            <h4>project 1</h4>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Non arcu risus quis varius quam quisque id diam. Ut eu sem integer vitae justo eget
             magna. Ridiculus mus mauris vitae ultricies. Dui id ornare arcu odio ut sem. Quis vel eros donec ac odio
@@ -36,6 +36,7 @@ Grand Circus)
             sagittis aliquam malesuada bibendum arcu vitae. Egestas sed sed risus pretium quam vulputate dignissim.
             Tristique senectus et netus et.
 
+            <h4>project 2</h4>
             Bibendum neque egestas congue quisque egestas diam in arcu. Dignissim sodales ut eu sem integer vitae justo
             eget magna. Eget egestas purus viverra accumsan in nisl nisi. Fermentum posuere urna nec tincidunt praesent
             semper feugiat. Sem fringilla ut morbi tincidunt augue interdum velit euismod. Cras semper auctor neque
@@ -43,6 +44,7 @@ Grand Circus)
             lacus vestibulum sed arcu. Lorem ipsum dolor sit amet consectetur adipiscing elit. Placerat in egestas erat
             imperdiet sed euismod nisi.
 
+            <h4>project 3</h4>
             Pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat. Mauris pharetra et ultrices
             neque ornare aenean euismod. Non curabitur gravida arcu ac tortor dignissim convallis aenean. Cursus eget
             nunc scelerisque viverra mauris in aliquam sem. A scelerisque purus semper eget. Maecenas volutpat blandit
