added back the close tag that I accidentally erased

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Grand Circus)
             I'm a do-er. I wanted to be one of those developers that was bring life to all of these creative ideas. After years of mulling it over--a lot--
             I finally enrolled in the Grand Cirus C#/.Net bootcamp developing skills in: .NET Core, SQL Server,
             Agile, Git/GitHub, EF Core, HTML5/CSS, OOP, Pair Programming, TDD, Web APIs, and Data Structures and Algorithms. I hope to find my first full-time developer role in March.  
-            
+        </section>
 
         <section id = "S3">  
             <h3>homeTown</h3> 
