removed some ipsum statements

--- a/about.html
+++ b/about.html
@@ -32,12 +32,9 @@ scroll down the page.
         <section id="S1">
             <h3>bio</h3>
             <div><img src="images/me.jpeg" alt="picture of juliana-sheehan" width = 80%></div>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Non arcu risus quis varius quam quisque id diam. Ut eu sem integer vitae justo eget
-            magna. Ridiculus mus mauris vitae ultricies. Dui id ornare arcu odio ut sem. Quis vel eros donec ac odio
-            tempor orci dapibus. Fames ac turpis egestas integer eget aliquet nibh praesent. Vulputate sapien nec
-            sagittis aliquam malesuada bibendum arcu vitae. Egestas sed sed risus pretium quam vulputate dignissim.
-            Tristique senectus et netus et.
+            I grew up in Denver and I love to explore. This passion lead me to the slopes teaching people with disabilities to ski, to a ranch in Wyoming, to a non-profit teaching financial literacy to students through hands on learning experiences, to a tech startup with their billing department, and ultimately to the life of a developer. 
+            Suscinctly, the experiences show my journey as creative looking for innovative, effective, and efficient solutions in everything I do. 
+            In my free time I love to hang with my dogs, explore the outdoors, cooking, and trying all the deliscious foods. 
             <h3>contact me</h3>
            You can reach me via email at example@email.com or via Linkedin!
 
