--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@ scroll down the page.
             <h3>bio</h3>
             <div><img src="images/me.jpeg" alt="picture of juliana-sheehan" width = 80%></div>
             I grew up in Denver and I love to explore. This passion lead me to the slopes teaching people with disabilities to ski, to a ranch in Wyoming, to a non-profit teaching financial literacy to students through hands on learning experiences, to a tech startup with their billing department, and ultimately to the life of a developer. 
-            Suscinctly, the experiences show my journey as creative looking for innovative, effective, and efficient solutions in everything I do. 
-            In my free time I love to hang with my dogs, explore the outdoors, cooking, and trying all the deliscious foods. 
+            Suscinctly, these experiences show my journey as creative looking for innovative, effective, and efficient solutions in everything I do. 
+            I now live in Detroit and in my free time I love to hang with my dogs(well my parents' dogs via facetime), explore the outdoors, cook, and try all the deliscious foods. 
             <h3>contact me</h3>
            You can reach me via email at example@email.com or via Linkedin!
 
